--- a/WpfToDoList/WpfToDoList/Views/MainWindow.xaml
+++ b/WpfToDoList/WpfToDoList/Views/MainWindow.xaml
@@ -1,150 +1,198 @@
-﻿<Window x:Class="WpfToDoList.Views.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfToDoList.Views"
-        mc:Ignorable="d"
-        Title="To-Do Lists" Height="750" Width="1080">
-    <Grid Margin="0">
+﻿<Window
+	x:Class="WpfToDoList.Views.MainWindow"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:local="clr-namespace:WpfToDoList.Views"
+	mc:Ignorable="d"
+	Title="To-Do Lists"
+	Height="750"
+	Width="1080">
+    <Grid
+		Margin="0">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition
+				Height="Auto" />
             <!-- 第一區，高度自動 -->
-            <RowDefinition Height="*"/>
+            <RowDefinition
+				Height="*" />
             <!-- 第二區，填滿剩下空間 -->
-            <RowDefinition Height="Auto"/>
+            <RowDefinition
+				Height="Auto" />
             <!-- 第三區，高度自動 -->
         </Grid.RowDefinitions>
-
         <!-- 第一個 GroupBox -->
-        <GroupBox Grid.Row="0" Header="Search" Margin="10,10,10,0" FontSize="22">
+        <GroupBox
+			Grid.Row="0"
+			Header="Search"
+			Margin="10,10,10,0"
+			FontSize="22">
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition
+						Width="Auto" />
+                    <ColumnDefinition
+						Width="Auto" />
+                    <ColumnDefinition
+						Width="*" />
                 </Grid.ColumnDefinitions>
-                <Label 
-                    Grid.Column="0"
-                    Content="Search By"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Center"
-                    Margin="10,0,0,0"
-                    Height="35"
-                    Width="110"
-                    FontSize="20"/>
-                <ComboBox 
-                    Grid.Column="1"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Center"
-                    Margin="10,0,0,0"
-                    Width="120"/>
+                <Label
+					Grid.Column="0"
+					Content="Search By"
+					HorizontalAlignment="Left"
+					VerticalAlignment="Center"
+					Margin="10,0,0,0"
+					Height="35"
+					Width="110"
+					FontSize="20" />
+                <!-- ComboBox: 搜尋欄位選單 -->
+                <ComboBox
+					Grid.Column="1"
+					HorizontalAlignment="Left"
+					VerticalAlignment="Center"
+					Margin="10,0,0,0"
+					Width="120"
+					ItemsSource="{Binding SortByList}"
+					SelectedItem="{Binding SearchField, Mode=TwoWay}" />
+                <!-- TextBox: 關鍵字 -->
                 <TextBox
-                    Grid.Column="2"
-                    HorizontalAlignment="Stretch"
-                    VerticalAlignment="Center"
-                    Margin="10,0,10,0"
-                    Height="32"
-                    FontSize="20"
-                    VerticalContentAlignment="Center"/>
+					Grid.Column="2"
+					HorizontalAlignment="Stretch"
+					VerticalAlignment="Center"
+					Margin="10,0,10,0"
+					Height="32"
+					FontSize="20"
+					VerticalContentAlignment="Center"
+					Text="{Binding SearchKeyword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             </Grid>
         </GroupBox>
-
         <!-- 第二個 GroupBox -->
-        <GroupBox Grid.Row="1" Header="Tasks"
-          Margin="10,10,10,10"
-          FontSize="22"
-          VerticalAlignment="Stretch"
-          HorizontalAlignment="Stretch">
+        <GroupBox
+			Grid.Row="1"
+			Header="Tasks"
+			Margin="10,10,10,10"
+			FontSize="22"
+			VerticalAlignment="Stretch"
+			HorizontalAlignment="Stretch">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition
+						Height="Auto" />
+                    <RowDefinition
+						Height="*" />
                 </Grid.RowDefinitions>
                 <!-- 排序區 -->
-                <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="10,10,0,10">
-                    <Label Content="Sorted By" FontSize="20" VerticalAlignment="Center"/>
+                <StackPanel
+					Orientation="Horizontal"
+					Grid.Row="0"
+					Margin="10,10,0,10">
+                    <Label
+						Content="Sorted By"
+						FontSize="20"
+						VerticalAlignment="Center" />
                     <!-- 排序欄位選單，記得 ItemsSource 與 SelectedItem 綁定 -->
-                    <ComboBox Width="140"
-                              Margin="10,0,0,0"
-                              FontSize="18"
-                              VerticalAlignment="Center"
-                              ItemsSource="{Binding SortByList}"
-                              SelectedItem="{Binding SelectedSortBy, Mode=TwoWay}"/>
-                    <CheckBox Content="Descending"
-                              Margin="10,0,0,0"
-                              FontSize="15"
-                              VerticalAlignment="Center"
-                              IsChecked="{Binding IsDescending, Mode=TwoWay}"/>
+                    <ComboBox
+						Width="140"
+						Margin="10,0,0,0"
+						FontSize="18"
+						VerticalAlignment="Center"
+						ItemsSource="{Binding SortByList}"
+						SelectedItem="{Binding SelectedSortBy, Mode=TwoWay}" />
+                    <CheckBox
+						Content="Descending"
+						Margin="10,0,0,0"
+						FontSize="15"
+						VerticalAlignment="Center"
+						IsChecked="{Binding IsDescending, Mode=TwoWay}" />
                 </StackPanel>
                 <!-- DataGrid 綁定 Tasks -->
-                <DataGrid Grid.Row="1"
-                          Margin="10,0,10,10"
-                          FontSize="20"
-                          AutoGenerateColumns="False"
-                          ItemsSource="{Binding Tasks}"
-                          SelectedItem="{Binding SelectedTask, Mode=TwoWay}"
-                          IsReadOnly="True">
+                <DataGrid
+					Grid.Row="1"
+					Margin="10,0,10,10"
+					FontSize="20"
+					AutoGenerateColumns="False"
+					ItemsSource="{Binding Tasks}"
+					SelectedItem="{Binding SelectedTask, Mode=TwoWay}"
+					IsReadOnly="True">
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Priority" Binding="{Binding Priority}" Width="Auto"/>
-                        <DataGridTextColumn Header="Date" Binding="{Binding Date, StringFormat=yyyy-MM-dd}" Width="Auto"/>
-                        <DataGridTextColumn Header="Content" Binding="{Binding Content}" Width="*" />
-                        <DataGridTextColumn Header="Id" Binding="{Binding Id}" Width="Auto"/>
+                        <DataGridTextColumn
+							Header="Priority"
+							Binding="{Binding Priority}"
+							Width="Auto" />
+                        <DataGridTextColumn
+							Header="Date"
+							Binding="{Binding Date, StringFormat=yyyy-MM-dd HH:mm:ss}"
+							Width="Auto" />
+                        <DataGridTextColumn
+							Header="Content"
+							Binding="{Binding Content}"
+							Width="*" />
+                        <DataGridTextColumn
+							Header="Id"
+							Binding="{Binding Id}"
+							Width="Auto" />
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
         </GroupBox>
-
         <!-- 第三個 GroupBox：新增/刪除任務 -->
-        <GroupBox Grid.Row="2" Header="Add Task"
-          Margin="10,0,10,10"
-          FontSize="22"
-          VerticalAlignment="Bottom">
+        <GroupBox
+			Grid.Row="2"
+			Header="Add Task"
+			Margin="10,0,10,10"
+			FontSize="22"
+			VerticalAlignment="Bottom">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
+                    <RowDefinition
+						Height="Auto" />
                     <!-- TextBox -->
-                    <RowDefinition Height="Auto"/>
+                    <RowDefinition
+						Height="Auto" />
                     <!-- 下拉+按鈕們 -->
                 </Grid.RowDefinitions>
-
                 <!-- 第一列：TextBox 佔滿整行、左右有間隔 -->
-                <TextBox Grid.Row="0"
-                 Margin="10,10,10,5"
-                 HorizontalAlignment="Stretch"
-                 VerticalAlignment="Center"
-                 Height="32"
-                 FontSize="16"
-                 VerticalContentAlignment="Center"
-                 Text="{Binding NewTaskContent, Mode=TwoWay}"/>
-
+                <TextBox
+					Grid.Row="0"
+					Margin="10,10,10,5"
+					HorizontalAlignment="Stretch"
+					VerticalAlignment="Center"
+					Height="32"
+					FontSize="16"
+					VerticalContentAlignment="Center"
+					Text="{Binding NewTaskContent, Mode=TwoWay}" />
                 <!-- 第二列：Priority + Add + Delete 橫向排列 -->
-                <StackPanel Grid.Row="1"
-                    Orientation="Horizontal"
-                    Margin="10,0,10,10"
-                    VerticalAlignment="Center">
+                <StackPanel
+					Grid.Row="1"
+					Orientation="Horizontal"
+					Margin="10,0,10,10"
+					VerticalAlignment="Center">
                     <!-- Priority ComboBox -->
-                    <ComboBox Width="200"
-                      FontSize="20"
-                      ItemsSource="{Binding PriorityList}"
-                      SelectedItem="{Binding SelectedPriority, Mode=TwoWay}"
-                      Margin="0,0,10,0"/>
+                    <ComboBox
+						Width="200"
+						FontSize="20"
+						ItemsSource="{Binding PriorityList}"
+						SelectedItem="{Binding SelectedPriority, Mode=TwoWay}"
+						Margin="0,0,10,0" />
                     <!-- Add 按鈕 -->
-                    <Button Content="Add"
-                    FontSize="18"
-                    Width="100"
-                    Height="28"
-                    Padding="20,0"
-                    Margin="0,0,10,0"
-                    Click="AddButton_Click"/>
+                    <Button
+						Content="Add"
+						FontSize="18"
+						Width="100"
+						Height="28"
+						Padding="20,0"
+						Margin="0,0,10,0"
+						Click="AddButton_Click" />
                     <!-- Delete 按鈕 -->
-                    <Button x:Name="DeleteButton"
-                    Content="Delete"
-                    FontSize="18"
-                    Width="100"
-                    Height="28"
-                    Padding="20,0"
-                    Click="DeleteButton_Click"/>
+                    <Button
+						x:Name="DeleteButton"
+						Content="Delete"
+						FontSize="18"
+						Width="100"
+						Height="28"
+						Padding="20,0"
+						Click="DeleteButton_Click" />
                 </StackPanel>
             </Grid>
         </GroupBox>
